--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 html {
     background-color: #000000;
-    font-family: Helvetica, sans-serif;
+    font-family: Avenir, Helvetica, sans-serif;
     font-size: 22px;
     color: seashell;
     opacity: 0.9;
@@ -8,23 +8,41 @@ html {
 
 header {
     height: 69px;
-    display: inline-flex;
     border-bottom: 1px solid seashell;
     width: 100%;
+    overflow: hidden;
 }
 
 nav {
     float: right;
+    padding: auto auto 0 auto;
+    margin: auto auto 0 auto;
+    font-size: .75rem;
+}
+
+#logo {
+    float: left;
+    position: relative;
+    margin: 10px auto;
 }
 
 .content {
     text-align: center;
-    display: block;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.item {
+    width: 300px;
+    height: fit-content;
+    margin: 15px
 }
 
 .item-image {
     width: 300px;
     height: 200px;
+    margin-bottom: 10px;
 }
 
 #logo {
@@ -52,4 +70,57 @@ nav {
 #tea-month {
     width: 1000px;
     height: auto;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+#month-heading {
+    width: 1000px;
+}
+
+#month-items {
+    display: inline-flex;
+    max-width: 1000px;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+#locations {
+    width: 1200px;
+    height: 500px;
+    background-image: url(../images/img-locations-background.webp);
+    margin-top: 10px;
+    padding-top: 20px;
+    display: inline-flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+}
+
+#location-heading {
+    width: 1200px;
+}
+
+.location {
+    background-color: #000000;
+    width: 300px;
+    padding-bottom: 20px;
+    margin: auto 10px;
+}
+
+.footer {
+    height: 220px;
+    width: 1200px;
+}
+
+#contact {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+#copyright {
+    text-align: left;
+    padding-left: 20px;
 }
